--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -1,11 +1,13 @@
 ---
 title: Lorem ipsum dolor sit amet, consectetur adipiscing elit
-date: '01.01.2024'
+date: 01.01.2024
+thumbnail: /images/uploads/fdf4a6e1d4223c716b613.png
 ---
-
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis nunc sed velit congue, nec finibus quam vestibulum. Etiam egestas ipsum vitae posuere vestibulum. Praesent convallis nisi sit amet ex blandit efficitur. Donec facilisis sed tortor eget elementum. Vivamus eget ornare augue. Fusce quis efficitur nibh. Integer varius lorem et magna mattis, quis ultrices nunc ullamcorper. Vestibulum dapibus ligula eu arcu molestie ultrices. Proin et viverra ante, vel malesuada eros. Vivamus nisi ipsum, porta sed urna nec, molestie dapibus tortor.
 
 Nam malesuada arcu dui, in rhoncus arcu consequat ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas eget felis vel lorem convallis maximus. Donec tempus, mi sit amet sollicitudin lacinia, felis sem consequat dui, et faucibus arcu justo id sem. Phasellus aliquet eget risus quis iaculis. Duis cursus, enim vitae maximus pharetra, sapien velit pharetra purus, sit amet laoreet nisl diam sed nulla. Proin risus augue, molestie convallis urna at, eleifend ultricies urna. Mauris ac pharetra elit, eu tincidunt sapien.
+
+![Blockchain scheme](/images/uploads/fdf4a6e1d4223c716b613.png "Blockchain scheme")
 
 Nullam ut augue volutpat, dapibus mauris sit amet, posuere orci. Donec sed erat et erat auctor vestibulum. Morbi ac nulla sed nulla interdum sodales. Mauris scelerisque a augue sed fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec molestie dui a enim imperdiet blandit. Quisque eros eros, pharetra a ex a, ultrices sollicitudin massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam eros augue, venenatis id facilisis in, pharetra at eros. Nulla a turpis egestas tellus ultricies facilisis. Etiam hendrerit volutpat semper. Sed vitae nibh consequat, convallis ex sit amet, hendrerit dui. Morbi imperdiet blandit est, in placerat dolor tristique non. Vestibulum lacinia tortor ac nibh interdum placerat. Etiam luctus sapien diam, sed dapibus urna varius vel. Donec augue ipsum, pharetra id faucibus sed, tincidunt blandit turpis.
 
