--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -1,7 +1,7 @@
 ---
 title: Lorem ipsum dolor sit amet, consectetur adipiscing elit
 date: 01.01.2024
-thumbnail: /images/uploads/fdf4a6e1d4223c716b613.png
+thumbnail: /images/uploads/3дня.png
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis nunc sed velit congue, nec finibus quam vestibulum. Etiam egestas ipsum vitae posuere vestibulum. Praesent convallis nisi sit amet ex blandit efficitur. Donec facilisis sed tortor eget elementum. Vivamus eget ornare augue. Fusce quis efficitur nibh. Integer varius lorem et magna mattis, quis ultrices nunc ullamcorper. Vestibulum dapibus ligula eu arcu molestie ultrices. Proin et viverra ante, vel malesuada eros. Vivamus nisi ipsum, porta sed urna nec, molestie dapibus tortor.
 
