Update Blog “тусовка-будет-через-три-дня”

--- a/src/posts/тусовка-будет-через-три-дня.md
+++ b/src/posts/тусовка-будет-через-три-дня.md
@@ -4,4 +4,6 @@ title: Тусовка будет через три дня
 date: 2024-05-03T20:33:00.000Z
 thumbnail: /images/uploads/3дня.png
 ---
+![Вейп](/images/uploads/20231210_115421.jpg "Вейп!")
+
 Очень круто там будет Роман Гейнц
